--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -5,3 +5,6 @@
      <p><%= place.description %></p><br />
   </div>
 <% end %>
+<div class="container pagination justify-content-center" >
+  <%= paginate @places %>
+</div>
