--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -27,7 +27,7 @@
     </script>
 
   <script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDI4MPa4nJNP_duyQ4iTkEz4F1Pk-_snfI&callback=initMap">
+  src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap">
   </script>
 
   <div id="map"></div>
