--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -43,4 +43,11 @@
   
   </div>
   <br />
+  <div class="clear"></div>
+  <%= simple_form_for @comment, url: '#' do |f| %>
+    <%= f.input :message %>
+    <%= f.input :rating %>
+    <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+  <% end %>
+
 </div>
