the comments in the show page has been styliced the buttons has been moved.

--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -45,12 +45,17 @@
   <br />
   <div class="clear"></div>
 
+<div class="col-10 offset-1">
 
- <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-  Add a comment
-</button>
+  <h1 class="float-left">Comments</h1>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+    Add a comment
+  </button>
 
+</div>
+
+<div class="clear"></div>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -78,10 +83,9 @@
 
 </div>
 
-<h1>Comments</h1>
-
+<div class="row">
 <% @place.comments.each do |comment| %>
- <div>
+ <div class="col-12 col-sm-6">
    <blockquote>
       <% if comment.humanized_rating.present? %>
         <b><%= comment.humanized_rating %></b> -
@@ -91,3 +95,4 @@
    </blockquote>
  </div>
 <% end %>
+</div>
