--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -70,3 +70,38 @@ blockquote:before {
 blockquote p {
   display: inline;
 }
+
+#bpic {
+  margin-left: 5%;
+}
+
+.booyah-box01 {
+  -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
+  box-shadow: 1px 1px 2px 0 #d0d0d0;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 0px;
+}
+
+.pindex {
+  position:relative;
+  max-height: 20%;
+  max-width: 20%;
+}
+
+
+.indexpic {
+
+}
+
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
