--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -3,7 +3,16 @@
   <i><%= @place.address %></i>
   <br/><br/>
   <p><%= @place.description %></p>
+  <br/><br/>
+ <div class="booyah-box03 col-10 offset-1">
+    <% @place.photos.each do |photo| %>
+    <%= image_tag photo.picture.url.to_s %>
+    <%= photo.caption %>
+    <% end %>
+ </div>
 
+<!-- googlemap -->
+<div class="booyah-box01 col-10 offset-1">
   <% if @place.latitude.present? && @place.longitude.present? %>
  
     <script>
@@ -32,52 +41,89 @@
 
   <div id="map"></div>
   <% end %>
-
+</div>
+<!-- googlemap -->
   <br />
 
-  <div class="float-right">
-    <% if current_user && current_user == @place.user %>
-      <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-primary' %>
-      <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger' %>
-    <% end %>
+    <div class="col-10 offset-1">
+      <% if current_user && current_user == @place.user %>
+        <%= link_to 'Edit', edit_place_path(@place), class: 'btn btn-warning float-right' %>
+        <%= link_to 'Destroy', place_path(@place), method: :delete, data: {confirm: 'Are you sure you want to delete this?'}, class: 'btn btn-danger float-right' %>
+      <% end %>
+    
+    </div>
+
   
-  </div>
-  <br />
+  <br /><br />
   <div class="clear"></div>
 
-<div class="col-10 offset-1">
-  <h1 class="float-left">Comments</h1>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
-    Add a comment
-  </button>
-</div>
+    <div class="col-10 offset-1">
+      <h1 class="float-left">Comments</h1>
 
-<div class="clear"></div>
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-        <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
-      </div>
-      <div class="modal-body">
-        <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
-         <%= f.input :message %>
-         <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
-      </div>
-      <% end %>
+      <button type="button" id="bpic" class="btn btn-success btn-lg float-right" data-toggle="modal" data-target="#myModal_02">
+        Add an Image
+      </button>
+      <!-- Button trigger modal for comment-->
+      <button type="button" class="btn btn-primary btn-lg float-right" data-toggle="modal" data-target="#myModal">
+        Add a comment
+      </button>
+
     </div>
-  </div>
-</div>
 
+    <div class="clear"></div>
+    <!-- Modal For Comment -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel">Add a comment</h4>
+          </div>
+          <div class="modal-body">
+            <%= simple_form_for @comment, url: place_comments_path(@place) do |f| %>
+             <%= f.input :message %>
+             <%= f.input :rating, as: :select, collection: Comment::RATINGS %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= f.submit "Add a Comment", class: 'btn btn-primary' %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+
+   <br />
+  <div class="clear"></div>
+
+
+    <div class="clear"></div>
+    <!-- Modal for Picture  -->
+    <div class="modal fade" id="myModal_02" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+            <h4 class="modal-title" id="myModalLabel">Add an image</h4>
+          </div>
+          <div class="modal-body">
+             <%= simple_form_for @photo, url: place_photos_path(@place) do |photo| %>
+             <%= photo.input :caption %>
+             <%= photo.input :picture %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= photo.submit "Add a Image", class: 'btn btn-primary' %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>   
 
 </div>
 
