--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -6,7 +6,7 @@
   <br/><br/>
  <div class="booyah-box03 col-10 offset-1">
     <% @place.photos.each do |photo| %>
-    <%= image_tag photo.picture.url.to_s %>
+    <%= image_tag photo.picture.url.to_s, class: "placepic"  %>
     <%= photo.caption %>
     <% end %>
  </div>
@@ -59,7 +59,7 @@
 
     <div class="col-10 offset-1">
       <h1 class="float-left">Comments</h1>
-
+      <!-- Button trigger modal for photo-->
       <button type="button" id="bpic" class="btn btn-success btn-lg float-right" data-toggle="modal" data-target="#myModal_02">
         Add an Image
       </button>
@@ -118,7 +118,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <%= photo.submit "Add a Image", class: 'btn btn-primary' %>
+            <%= photo.submit "Add an Image", class: 'btn btn-primary' %>
           </div>
           <% end %>
         </div>
